[package]
name = "nextjs-rust-playground-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
legion = { version = "*", default-features = false, features = ["wasm-bindgen"] }
wasm-bindgen = "0.2.82"
js-sys = "0.3.59"